k8s/auction/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auction-back
  namespace: auction
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auction-back
  template:
    metadata:
      labels:
        app: auction-back
    spec:
      containers:
        - name: auction-back
          image: "965838107338.dkr.ecr.ap-northeast-2.amazonaws.com/auction-backend:20260327-9"
#          imagePullPolicy: Always
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 5

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1024Mi"
