k8s/auction/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auction-back-service
  namespace: auction
spec:
  selector:
    app: auction-back
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
