k8s/auction/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auction-back-ingress
  namespace: auction
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-2:965838107338:certificate/aa78485b-a055-474f-8482-81181e0c2ef5"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/load-balancer-name: auction-api-alb
spec:
  ingressClassName: alb
  rules:
    - host: "api.auctionbid.shop"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auction-back-service
                port:
                  number: 80
